2003-05-02  Francois Ferrand  <typz@sourceforge.users.net>

	* include/commctrl.h (TBM_*): Add missing trackbar defines.

2003-05-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cplext.h (CPLPAGE_MOUSE_WHEEL,
	CPLPAGE_DISPLAY_BACKGROUND): Add defines.

2003-04-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (DC_PEN, DC_BRUSH): Add defines.
	(SetDCPenColor, SetDCBrushColor): Add prototypes.
	* lib/gdi32.def (SetDCPenColor, SetDCBrushColor): Add stubs.

2003-04-26  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winioctl.h (DEVICE_TYPE_FROM_CTL_CODE): Add macro.

2003-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h (ITypeMarshal): Add interface.

2003-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h: Clean up formatting.
	(RETRIEVAL_POINTERS_BUFFER): Add fields to Extents[1] struct.
	(CREATE_DISK): Add _ANONYMOUS_UNION macro.
	(DISK_CACHE_INFORMATION): Likewise.
	(DISK_DETECTION_INFO): Likewise.
	(DISK_PARTITION_INFO): Likewise.
	(PARTITION_INFORMATION_EX): Likewise.
	(DRIVE_LAYOUT_INFORMATION_EX): Likewise.

2003-04-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winbase.h (DeleteVolumeMountPoint[AW],
	FindFirstVolumeMountPoint[AW], FindNextVolumeMountPoint[AW],
	FindVolumeMountPointClose, GetVolumeNameForVolumeMountPoint[AW],
	GetVolumePathName[AW], GetVolumePathNamesForVolumeName[AW],
	SetVolumeMountPoint[AW]): Add prototypes.
	* include/winioctl.h (IOCTL_DISK_GET_PARTITION_INFO_EX,
	IOCTL_DISK_SET_PARTITION_INFO_EX,
	IOCTL_DISK_GET_DRIVE_LAYOUT_EX,
	IOCTL_DISK_SET_DRIVE_LAYOUT_EX, IOCTL_DISK_CREATE_DISK,
	IOCTL_DISK_GET_LENGTH_INFO, IOCTL_DISK_PERFORMANCE_OFF,
	IOCTL_DISK_GET_DRIVE_GEOMETRY_EX, IOCTL_DISK_GROW_PARTITION,
	IOCTL_DISK_GET_CACHE_INFORMATION,
	IOCTL_DISK_SET_CACHE_INFORMATION,
	IOCTL_DISK_DELETE_DRIVE_LAYOUT, IOCTL_DISK_UPDATE_PROPERTIES,
	FSCTL_GET_VOLUME_BITMAP, FSCTL_GET_RETRIEVAL_POINTERS,
	FSCTL_MOVE_FILE): Define.