@@ -1,6 +1,6 @@
 #ifndef _RICHEDIT_H
 #define _RICHEDIT_H
-#if __GNUC__ >=3
+#if __GNUC__ >= 3
 #pragma GCC system_header
 #endif
 
@@ -14,6 +14,7 @@ extern "C" {
 #else
 #define RICHEDIT_CLASS "RichEdit20A"
 #endif
+#define RICHEDIT_CLASS10A    "RICHEDIT"
 #define CF_RTF TEXT("Rich Text Format")
 #define CF_RTFNOOBJS TEXT("Rich Text Format Without Objects")
 #define CF_RETEXTOBJ TEXT("RichEdit Text and Objects")
@@ -142,14 +143,32 @@ extern "C" {
 #define EM_SETTEXTMODE	(WM_USER+89)
 #define EM_GETTEXTMODE	(WM_USER+90)
 #define EM_AUTOURLDETECT	(WM_USER+91)
+#define EM_GETAUTOURLDETECT	(WM_USER + 92)
+#define EM_SETPALETTE	(WM_USER + 93)
 #define EM_GETTEXTEX	(WM_USER+94)
 #define EM_GETTEXTLENGTHEX	(WM_USER+95)
 #define EM_SHOWSCROLLBAR	(WM_USER+96)
+#define EM_SETTEXTEX	(WM_USER + 97)
+#define EM_SETPUNCTUATION	(WM_USER + 100)
+#define EM_GETPUNCTUATION	(WM_USER + 101)
+#define EM_SETWORDWRAPMODE	(WM_USER + 102)
+#define EM_GETWORDWRAPMODE	(WM_USER + 103)
+#define EM_SETIMECOLOR	(WM_USER + 104)
+#define EM_GETIMECOLOR	(WM_USER + 105)
+#define EM_SETIMEOPTIONS	(WM_USER + 106)
+#define EM_GETIMEOPTIONS	(WM_USER + 107)
 #define EM_SETLANGOPTIONS	(WM_USER+120)
 #define EM_GETLANGOPTIONS	(WM_USER+121)
 #define EM_GETIMECOMPMODE	(WM_USER+122)
+#define EM_FINDTEXTW	(WM_USER + 123)
+#define EM_FINDTEXTEXW	(WM_USER + 124)
+#define EM_RECONVERSION	(WM_USER + 125)
+#define EM_SETBIDIOPTIONS	(WM_USER + 200)
+#define EM_GETBIDIOPTIONS	(WM_USER + 201)
 #define EM_SETTYPOGRAPHYOPTIONS	(WM_USER+202)
 #define EM_GETTYPOGRAPHYOPTIONS	(WM_USER+203)
+#define EM_SETEDITSTYLE	(WM_USER + 204)
+#define EM_GETEDITSTYLE	(WM_USER + 205)
 #define EM_GETSCROLLPOS	(WM_USER+221)
 #define EM_SETSCROLLPOS	(WM_USER+222)
 #define EM_SETFONTSIZE	(WM_USER+223)
