@@ -1,3 +1,13 @@
+2003-05-02  Steven Edwards  <Steven_Ed4153@yahoo.com>
+
+	* include/richedit.h (EM_FINDTEXTEXW, EM_FINDTEXTW,
+	EM_GETAUTOURLDETECT, EM_GETBIDIOPTIONS, EM_GETEDITSTYLE,
+	EM_GETIMECOLOR, EM_GETIMEOPTIONS, EM_GETPUNCTUATION,
+	EM_GETWORDWRAPMODE, EM_RECONVERSION, EM_SETBIDIOPTIONS,
+	EM_SETEDITSTYLE, EM_SETIMECOLOR, EM_SETIMEOPTIONS,
+	EM_SETPALETTE, EM_SETPUNCTUATION, EM_SETTEXTEX,
+	EM_SETWORDWRAPMODE, RICHEDIT_CLASS10A): Add defines.
+
 2003-05-02  Francois Ferrand  <typz@sourceforge.users.net>
 
 	* include/commctrl.h (TBM_*): Add missing trackbar defines.
